k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: richie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: acrrichiemeli.azurecr.io/backend/casopractico2:v2
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: acr-auth
