k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: richie-ingress
 namespace: richie
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
rules:
- host: <TU_DOMINIO_O_IP>  # No se incluyo. Esta decisión se debe a restricciones del entorno cloud de pruebas.
  http:
   paths:
   - path: /api
     pathType: Prefix
     backend:
       service:
        name: backend-service
        port:
         number: 5000
   - path: /
     pathType: Prefix
     backend: 
      service:
       name: frontend-service
       port:
        number: 80
